traefik-psql-ingress/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: hippo-1
  namespace: customer-1
spec:
  entryPoints:
    - postgresql
  routes:
  - match: HostSNI(`localhost`)
    services:
      - name: sample-coredb
        port: 5432
  tls:
    passthrough: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
spec:
  entryPoints:
    - traefik
  routes:
  - match: PathPrefix(`/api`)
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
